--- a/Dunston.html
+++ b/Dunston.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Dunston Retreat Center</title>
+  <title>Dunston Retreat Center - Tran Xuan Huong </title>
 </head>
 <body>
 
@@ -75,3 +75,4 @@
 
 </body>
 </html>
+
