--- a/ex25/home.html
+++ b/ex25/home.html
@@ -1,10 +1,11 @@
 <html>
 <head>
-    <title>Page Title</title>
+    <title> Tran Xuan Huong </title>
 </head>
 <frameset cols = "30%,70%">
     <frame src = "left.html"></frame>
     <frame src ="right.html"></frame>"
 
 </frameset>
+
 </html>
