--- a/ex25/home.html
+++ b/ex25/home.html
@@ -1,11 +1,12 @@
-<html>
+ <html>
 <head>
     <title> Tran Xuan Huong </title>
 </head>
 <frameset cols = "30%,70%">
-    <frame src = "left.html"></frame>
-    <frame src ="right.html"></frame>"
+    <frame src = "left.html" name = "content_list"></frame>
+    <frame src ="right.html" name = "main"></frame>"
 
 </frameset>
 
 </html>
+
