--- a/ex33/ex33.html
+++ b/ex33/ex33.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Internal Styles</title>
+  <title>ex33- Trần Xuân Hương</title>
   <style type="text/css">
     body {
       background-image: url('camel.gif');   
@@ -63,3 +63,4 @@
 
 </body>
 </html>
+
