--- a/ex34/ex34.html
+++ b/ex34/ex34.html
@@ -1,4 +1,5 @@
 <html>
+<title> ex 34 - Trần Xuân Hương</title>
   <body>
 
     <h1 style="font-size:28px;">Inline Styles</h1>
@@ -42,3 +43,4 @@
 
   </body>
 </html>
+
