--- a/ex35/index.html
+++ b/ex35/index.html
@@ -1,7 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <title>External Styles</title>
+  <title>Ex35 - Trần Xuân Hương</title>
   <link rel="stylesheet" href="mainstyle.css">
 </head>
 <body>
@@ -71,3 +70,4 @@
 
 </body>
 </html>
+
