--- a/ex33/ex33.html
+++ b/ex33/ex33.html
@@ -1,12 +1,13 @@
+<!DOCTYPE html>
 <html>
 <head>
-  <title>ex33- Trần Xuân Hương</title>
+  <title> Ex33 - Trần Xuân Hương </title>
   <style type="text/css">
     body {
-      background-image: url('camel.gif');   
-      background-position: right bottom;    
-      background-repeat: no-repeat;         
-      background-attachment: fixed;       
+      background-image: url('images/camel.gif');
+      background-position: right bottom;
+      background-repeat: no-repeat;
+      background-attachment: fixed;
     }
     p {
       font-size: 12pt;
@@ -22,45 +23,43 @@
 </head>
 <body>
 
-  <h1>Internal Styles</h1>
+  <h2>Internal Styles</h2>
   <p><strong>Style Properties:</strong> background, p, strong</p>
   <hr>
 
-  <h1 style="color:#000000;">Vietnam Information</h1>
+  <h1>Vietnam Information</h1>
 
+  <h3><strong>Geography</strong></h3>
   <p>
-    <b>Geography</b><br>
     Inland area: 330,991 km<sup>2</sup><br>
     Continental shelf area: 1,000,000 km<sup>2</sup><br>
     Population: 78,774,000 inhabitants (in 1999)<br>
     Coastline: 3,260 km<br>
     Inland coordinates: Latitude 102010' - 109030' East<br>
-    Longitude 08030' - 2302' North
+    Longitude 08030' - 23022' North
   </p>
 
+  <h3><strong>Topography</strong></h3>
   <p>
-    <strong>Topography</strong><br>
     Three quarters of Vietnam’s territory consists of mountainous regions. Vietnam has two major deltas 
-    (the Red River delta and the Mekong delta) and for distinctive mountainous zones each having its own unique features.
+    (the Red River delta and the Mekong delta) and four distinctive mountainous zones each having its own unique features.
   </p>
 
+  <h3><strong>People</strong></h3>
   <p>
-    <strong>People</strong><br>
-    The Vietnamese population exceeds 78.7 million divided in 54 ethnic groups. The largest group is the Viet, or Kinh,
-    accounting for 86% of the whole population, concentrating in the plains areas while minorities occupy the highlands and the mountains.
+    The Vietnamese population exceeds 78.7 million divided in 54 ethnic groups. The largest group is the Viet, 
+    or Kinh, accounting for 80% of the whole population concentrating in the plain areas while minorities occupy 
+    the highlands and the mountains.
   </p>
 
+  <h3><strong>Religion</strong></h3>
   <p>
-    <strong>Religion</strong><br>
-    There is no official religion in Vietnam, but Buddhism is relatively popular. Some of the Catholic churches and Buddhist 
-    pagodas are interesting tourist attractions. There are religions more specific to the southern regions of the country such as the 
-    Caodai sect, the Hoa Hao sect, and Islam. Most Vietnamese worship their ancestors.
+    There is no official religion in Vietnam, but Buddhism is relatively popular. Some of the Catholic churches 
+    and Buddhist pagodas are interesting tourist attractions. There are religions more specific to the southern 
+    regions of the country such as the CaoDai sect, the Hoa Hao sect, and Islam. Most Vietnamese worship their ancestors.
   </p>
 
-  <p style="font-style:italic; font-size:12px; margin-top:20px;">
-    Copyright © <i>BenThanh Tourist</i>
-  </p>
+  <p><em>Copyright © BenThanh Tourist</em></p>
 
 </body>
 </html>
-
