--- a/ex37/home.html
+++ b/ex37/home.html
@@ -1,4 +1,3 @@
-
 <html>
 <head>
     <title>Home Page - Trần Xuân Hương</title>
@@ -6,29 +5,28 @@
 </head>
 <body>
     <div id="container">  
-<ul>
-<li> <a href="#">HOME</a></li>
-<li> <a href="#">HTML</a></li>
-<li> <a href="#">CSS</a>
-    <ul>
-     <li> <a href="#">CSS CĂN BẢN</a></li>
-     <li> <a href="#">GIAO DIỆN VỚI CSS</a></li>
-     <li> <a href="#">CSS NÂNG CAO</a></li>
- </ul>
-</li>
-<li> <a href="#">JAVASCRIPT</a>
- <ul>
-     <li> <a href="#">LESSON 01</a></li>
-     <li> <a href="#">LESSON 02</a></li>
-     <li> <a href="#">LESSON 03</a></li>
- </ul>
-</li>
-<li> <a href="#">HTML DOM</a></li>
-<li> <a href="#">NGÔN NGỮ ASP</a></li>
-
-
-</ul>
-
-</div>
+        <ul>
+            <li><a href="#">HOME</a></li>
+            <li><a href="#">HTML</a></li>
+            <li>
+                <a href="#">CSS</a>
+                <ul>
+                    <li><a href="#">CSS CĂN BẢN</a></li>
+                    <li><a href="#">GIAO DIỆN VỚI CSS</a></li>
+                    <li><a href="#">CSS NÂNG CAO</a></li>
+                </ul>
+            </li>
+            <li>
+                <a href="#">JAVASCRIPT</a>
+                <ul>
+                    <li><a href="#">LESSON 01</a></li>
+                    <li><a href="#">LESSON 02</a></li>
+                    <li><a href="#">LESSON 03</a></li>
+                </ul>
+            </li>
+            <li><a href="#">HTML DOM</a></li>
+            <li><a href="#">NGÔN NGỮ ASP</a></li>
+        </ul>
+    </div>
 </body>
 </html>
