--- a/ex38/four-seasons.html
+++ b/ex38/four-seasons.html
@@ -1,8 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>Ex38 - Nguyen Hoang Huong Giang</title>
+  <title>Ex38 - Trần Xuân Hương</title>
   <!-- Liên kết file CSS -->
   <link rel="stylesheet" href="style.css">
 </head>
@@ -40,3 +38,4 @@
   </p>
 </body>
 </html>
+
