--- a/ex38/four-seasons.html
+++ b/ex38/four-seasons.html
@@ -1,11 +1,11 @@
 <html>
 <head>
-  <title>Ex38 - Trần Xuân Hương</title>
+  <title>Four Seasons - Trần Xuân Hương</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <p id="spring">
-    <span class="title">SPRING</span><br>
+    <span>SPRING</span><br>
     In the days of December, when heaven and earth are bustling in the love song 
     of the season, we often walk together through the crowded streets of Tet holiday. 
     The street these days is not as shabby as when the new winter comes, the street is 
@@ -13,7 +13,7 @@
   </p>
 
   <p id="summer">
-    <span class="title">SUMMER</span><br>
+    <span>SUMMER</span><br>
     Summer rain comes and goes suddenly bringing cool, clear air 
     to erase the burning summer sun. Memories flood back. The first 
     rain of the season brings bountiful crops, but sometimes takes 
@@ -21,21 +21,18 @@
   </p>
 
   <p id="autumn">
-    <span class="title">AUTUMN</span><br>
+    <span>AUTUMN</span><br>
     When autumn comes, the gentle warmth of autumn will gradually replace the 
     sweltering summer sun. The coming of autumn is not only a transformation of 
-    nature, but it also brings with it many changes of the human soul, a new look, 
-    a new emotion and possibly a new beginning.
+    nature, but it also brings with it many changes of the human soul, a new look, a 
+    new emotion and possibly a new beginning.
   </p>
 
   <p id="winter">
-    <span class="title">WINTER</span><br>
-    Winter is the season suitable for late love. Season of mistakes 
-    and worries. The season when myrtle stands hard in the cold rain 
-    but cannot bloom. It is also the season to cherish the buds. Spring 
-    begins with the cold to numb from the end of winter.
+    <span>WINTER</span><br>
+    Winter is the season suitable for late love. Season of mistakes and worries. 
+    The season when myrtle stands hard in the cold rain but cannot bloom. It is also 
+    the season to cherish the buds. Spring begins with the cold to numb from the end of winter.
   </p>
 </body>
 </html>
-
-
