--- a/ex44/web.html
+++ b/ex44/web.html
@@ -1,7 +1,5 @@
-    <!DOCTYPE html>
-    <html lang="en">
+   <html>
     <head>
-    <meta charset="UTF-8">
     <title>Master Lee's Tae Kwon Do</title>
     <style>
         body {
@@ -80,3 +78,4 @@
     </div>
     </body>
     </html>
+
